--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="section">
         <h2>💬 Contact Me</h2>
         <p><strong>Discord:</strong> puppo_boy</p>
-        <p><strong>VRChat:</strong> Bluey</p>
+        <p><strong>VRChat:</strong> Bluey The Oreo</p>
     </div>
 
     <div class="footer">
