--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>Bluey's Avatar Commissions</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Cute Pastel Styling -->
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -16,10 +15,11 @@
     }
     .container {
         max-width: 900px;
+        width: 92%;
         background: #ffffffcc;
         backdrop-filter: blur(6px);
-        margin: 40px auto;
-        padding: 30px;
+        margin: 20px auto;
+        padding: 20px;
         border-radius: 20px;
         box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
@@ -28,11 +28,14 @@
         color: #4a79ff;
     }
     h1 {
-        font-size: 2.4em;
+        font-size: 2em;
+    }
+    h3 {
+        font-size: 1.2em;
     }
     .section {
-        margin: 25px 0;
-        padding: 15px 20px;
+        margin: 20px 0;
+        padding: 15px;
         background: #ffffffaa;
         border-radius: 15px;
     }
@@ -45,13 +48,23 @@
     }
     ul {
         line-height: 1.6;
+        padding-left: 20px;
     }
     .footer {
         text-align: center;
         margin-top: 30px;
         padding: 15px;
-        font-size: 1.1em;
-        color: #333;
+        font-size: 1em;
+    }
+
+    /* MOBILE OPTIMISATION */
+    @media (max-width: 600px) {
+        h1 { font-size: 1.7em; }
+        h2 { font-size: 1.3em; }
+        h3 { font-size: 1.1em; }
+        .container { padding: 15px; }
+        ul { padding-left: 15px; }
+        .price-box { padding: 12px; }
     }
 </style>
 </head>
@@ -161,4 +174,4 @@
 </div>
 
 </body>
-  </html>
+</html>
