--- a/index.html
+++ b/index.html
@@ -164,18 +164,18 @@ function toggleDarkMode() {
     <h3>Cute • Affordable • Made With Love</h3>
 
     <div class="section">
-        <p>Hiya! I'm <strong>Bluey</strong>, a furry avatar creator with almost <strong>2 years of experience</strong> working with Unity and custom textures.</p>
-        <p>I specialise in clean, simple, beginner-friendly SFW avatars — perfect for anyone wanting a cute, custom look in VRChat.</p>
+        <p>Hiya! I’m <strong>Bluey</strong>, a furry avatar creator with almost <strong>2 years of experience</strong> working in Unity and custom texture creation.</p>
+        <p>I specialise in <strong>clean, simple, beginner-friendly SFW avatars</strong>, perfect for anyone wanting a cozy and personalised VRChat look.</p>
     </div>
 
     <div class="section">
         <h2>🌟 Why Choose Me?</h2>
         <ul>
-            <li>💸 Affordable pricing — highest price is <strong>£70</strong></li>
-            <li>🎨 No extra fees for recolours or texture edits</li>
-            <li>🛠️ Unity-based workflow (no heavy Blender work)</li>
-            <li>🤝 Friendly and communicative</li>
-            <li>⭐ Great for first-time buyers</li>
+            <li>💸 <strong>Affordable pricing</strong> — my highest tier is only £70</li>
+            <li>🎨 <strong>No extra fees</strong> for recolours or texture adjustments</li>
+            <li>🛠️ Unity-focused workflow (no heavy Blender work needed)</li>
+            <li>🤝 Friendly, patient, and communicative</li>
+            <li>⭐ Perfect for first-time buyers</li>
         </ul>
     </div>
 
@@ -187,7 +187,7 @@ function toggleDarkMode() {
             <ul>
                 <li>Recolours</li>
                 <li>Texture fixes</li>
-                <li>Material edits</li>
+                <li>Material adjustments</li>
                 <li>Small prefab add-ons</li>
                 <li>Minor Unity setup</li>
             </ul>
@@ -197,15 +197,15 @@ function toggleDarkMode() {
             <h3>🩵 Custom Texture Work — £25–£40</h3>
             <ul>
                 <li>Full custom texture sets</li>
-                <li>Custom markings, patterns, styles</li>
-                <li>Themes: pastel, neon, spooky, soft, etc.</li>
+                <li>Patterns, markings, gradients, styles</li>
+                <li>Themes: pastel, neon, spooky, soft, cozy, etc.</li>
             </ul>
         </div>
 
         <div class="price-box">
             <h3>💙 Full Re-Texture Package — £55–£70</h3>
             <ul>
-                <li>Full texture overhaul</li>
+                <li>Full-body texture overhaul</li>
                 <li>Clothing + skin design</li>
                 <li>Stylised shading</li>
                 <li>Basic Unity toggles</li>
@@ -218,23 +218,27 @@ function toggleDarkMode() {
         <h2>✨ How My Commissions Work</h2>
         <ul>
             <li>Contact me on Discord</li>
-            <li>Send references and details</li>
-            <li>I give you a quote</li>
-            <li>I work on your avatar</li>
-            <li>You receive the Unity package + files</li>
+            <li>Send references + any design ideas</li>
+            <li>I give you a price quote</li>
+            <li>I begin creating your avatar</li>
+            <li>You receive the Unity package + final files</li>
         </ul>
     </div>
 
     <div class="section">
         <h2>❓ Frequently Asked Questions</h2>
         <ul>
-            <li><strong>How long does a commission take?</strong><br>It depends on the difficulty, but I work as fast as I can while keeping quality high.</li><br>
+            <li><strong>How long does a commission take?</strong><br>
+            It depends on the difficulty, but I always work as fast as possible while keeping the quality high.</li><br>
 
-            <li><strong>Do you accept PayPal?</strong><br>Yes — I'm British.</li><br>
+            <li><strong>Do you accept PayPal?</strong><br>
+            Yes — I’m British, and PayPal is my main payment method.</li><br>
 
-            <li><strong>Can I request revisions?</strong><br>Yes! I want you to be happy with the result.</li><br>
+            <li><strong>Can I request revisions?</strong><br>
+            Absolutely — I want you to be happy with the final result.</li><br>
 
-            <li><strong>Do you work with Quest avatars?</strong><br>Yes — I try my best to make everything Quest compatible.</li>
+            <li><strong>Do you work with Quest avatars?</strong><br>
+            Yes! I always try my best to make everything Quest compatible.</li>
         </ul>
     </div>
 
@@ -245,7 +249,7 @@ function toggleDarkMode() {
     </div>
 
     <div class="footer">
-        🐾 Thanks for checking out my commissions!<br>
+        🐾 Thank you for checking out my commissions!<br>
         <a href="tos.html" style="color: var(--accent);">View Terms of Service</a>
     </div>
 
