--- a/tos.html
+++ b/tos.html
@@ -6,56 +6,155 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
+    :root {
+        /* LIGHT MODE */
+        --bg: linear-gradient(180deg, #c9e9ff, #ffd6f4);
+        --text: #2a2a2a;
+        --card-bg: #ffffffcc;
+        --section-bg: #ffffffaa;
+        --accent: #4a79ff;
+        --shadow: rgba(0,0,0,0.1);
+
+        /* DARK MODE */
+        --bg-dark: linear-gradient(180deg, #1a1b3a, #3b157a);
+        --text-dark: #e8e8ff;
+        --card-bg-dark: #1e1d3b;
+        --section-bg-dark: #29275a;
+        --accent-dark: #9d79ff;
+        --shadow-dark: rgba(0,0,0,0.4);
+    }
+
     body {
         font-family: Arial, sans-serif;
-        background: linear-gradient(180deg, #c9e9ff, #ffd6f4);
+        background: var(--bg);
         margin: 0;
-        padding: 20px;
-        color: #2a2a2a;
+        padding: 0;
+        color: var(--text);
+        transition: 0.35s ease;
+    }
+
+    body.dark {
+        background: var(--bg-dark);
+        color: var(--text-dark);
     }
 
     .container {
         max-width: 900px;
         width: 92%;
-        background: #ffffffcc;
+        background: var(--card-bg);
         backdrop-filter: blur(6px);
-        margin: 0 auto;
+        margin: 20px auto;
         padding: 20px;
         border-radius: 20px;
-        box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        box-shadow: 0 0 20px var(--shadow);
+        transition: 0.35s;
     }
 
-    h1 {
+    body.dark .container {
+        background: var(--card-bg-dark);
+        box-shadow: 0 0 20px var(--shadow-dark);
+    }
+
+    h1, h2 {
         text-align: center;
-        color: #4a79ff;
+        color: var(--accent);
+        transition: 0.35s;
+    }
+
+    body.dark h1, body.dark h2 {
+        color: var(--accent-dark);
     }
 
     ul {
         padding-left: 20px;
-        line-height: 1.6;
+        line-height: 1.7;
+    }
+
+    .toggle-dark {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background: var(--accent);
+        color: #fff;
+        border: none;
+        padding: 12px 18px;
+        border-radius: 50px;
+        font-size: 1em;
+        cursor: pointer;
+        box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        transition: 0.3s;
+        z-index: 999;
+    }
+
+    body.dark .toggle-dark {
+        background: var(--accent-dark);
+    }
+
+    .back-link {
+        text-align: center;
+        margin-top: 25px;
+        font-size: 1.1em;
+    }
+
+    .back-link a {
+        color: var(--accent);
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    body.dark .back-link a {
+        color: var(--accent-dark);
+    }
+
+    @media (max-width: 600px) {
+        .container { padding: 15px; }
+        h1 { font-size: 1.7em; }
+        h2 { font-size: 1.3em; }
+        ul { padding-left: 15px; }
+        .toggle-dark {
+            padding: 10px 14px;
+            font-size: 0.9em;
+        }
     }
 </style>
+
+<script>
+function toggleDarkMode() {
+    document.body.classList.toggle('dark');
+}
+</script>
+
 </head>
 
 <body>
 
+<button class="toggle-dark" onclick="toggleDarkMode()">🌙</button>
+
 <div class="container">
+
     <h1>📄 Terms of Service</h1>
+    <h2>Bluey's Avatar Commissions</h2>
+
+    <p style="text-align:center; margin-bottom:20px;">
+        These Terms of Service apply to all commission work.  
+        By commissioning me, you agree to the following:
+    </p>
 
     <ul>
-        <li><strong>No refunds</strong> once work has started.</li>
-        <li>The client must own or have legal rights to the base model and any assets provided.</li>
-        <li>I do not work on hateful, harmful, unsafe, or discriminatory content.</li>
+        <li><strong>No refunds</strong> once work has begun.</li>
+        <li>You must legally <strong>own the base model</strong> and any assets you provide.</li>
+        <li>I do not work on <strong>hateful, harmful, unsafe or discriminatory content</strong>.</li>
         <li>All commissions are strictly <strong>SFW</strong>.</li>
-        <li>All commissions are for <strong>VRChat use only</strong>.</li>
-        <li>Final results may vary depending on the complexity of the request.</li>
-        <li>Commissions may take varying time depending on difficulty, but I work as efficiently as possible.</li>
-        <li>Requesting a commission means you agree to these Terms of Service.</li>
+        <li>My work is intended for <strong>VRChat use only</strong>.</li>
+        <li>Completion time varies depending on complexity, but I always work efficiently while keeping quality high.</li>
+        <li>Minor revisions are allowed to ensure you're happy with the final result.</li>
+        <li>Commissioning me means you accept these Terms.</li>
     </ul>
 
-    <p style="text-align:center; margin-top:20px;">
-        <a href="index.html" style="color:#4a79ff;">← Back to Commission Page</a>
-    </p>
+    <div class="back-link">
+        <a href="index.html">← Back to Commission Page</a>
+    </div>
+
 </div>
 
 </body>
