--- a/tos.html
+++ b/tos.html
@@ -4,125 +4,134 @@
 <meta charset="UTF-8">
 <title>Bluey's Avatar Commissions – Terms of Service</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Terms of Service for Bluey's Avatar Commissions. Please read before commissioning.">
 
 <style>
-    :root {
-        /* LIGHT MODE */
-        --bg: linear-gradient(180deg, #c9e9ff, #ffd6f4);
-        --text: #2a2a2a;
-        --accent: #4a79ff;
+:root {
+    /* LIGHT MODE */
+    --bg: linear-gradient(180deg, #c9e9ff, #ffd6f4);
+    --text: #2a2a2a;
+    --accent: #4a79ff;
 
-        /* DARK MODE */
-        --bg-dark: linear-gradient(180deg, #1a1b3a, #3b157a);
-        --text-dark: #e8e8ff;
-        --accent-dark: #9d79ff;
-    }
+    /* DARK MODE */
+    --bg-dark: linear-gradient(180deg, #1a1b3a, #3b157a);
+    --text-dark: #e8e8ff;
+    --accent-dark: #9d79ff;
+}
 
-    body {
-        font-family: Arial, sans-serif;
-        background: var(--bg);
-        margin: 0;
-        padding: 0;
-        color: var(--text);
-        transition: 0.35s ease;
-    }
+body {
+    font-family: Arial, sans-serif;
+    background: var(--bg);
+    margin: 0;
+    padding: 0;
+    color: var(--text);
+    transition: 0.35s ease;
+}
 
-    body.dark {
-        background: var(--bg-dark);
-        color: var(--text-dark);
-    }
+body.dark {
+    background: var(--bg-dark);
+    color: var(--text-dark);
+}
 
-    .container {
-        max-width: 900px;
-        width: 92%;
-        background: rgba(255, 255, 255, 0.4); /* light frosted glass */
-        backdrop-filter: blur(10px);
-        margin: 20px auto;
-        padding: 20px;
-        border-radius: 20px;
-        box-shadow: 0 0 20px rgba(0,0,0,0.15);
-        transition: 0.35s;
-    }
+.container {
+    max-width: 900px;
+    width: 92%;
+    background: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(10px);
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.15);
+}
 
-    body.dark .container {
-        background: rgba(0, 0, 0, 0.3); /* dark frosted glass */
-        box-shadow: 0 0 20px rgba(0,0,0,0.5);
-    }
+body.dark .container {
+    background: rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
 
-    h1, h2 {
-        text-align: center;
-        color: var(--accent);
-        transition: 0.35s;
-    }
+h1, h2 {
+    text-align: center;
+    color: var(--accent);
+}
 
-    body.dark h1, body.dark h2 {
-        color: var(--accent-dark);
-    }
+body.dark h1,
+body.dark h2 {
+    color: var(--accent-dark);
+}
 
-    ul {
-        padding-left: 20px;
-        line-height: 1.7;
-    }
+ul {
+    padding-left: 20px;
+    line-height: 1.7;
+}
 
+.toggle-dark {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: var(--accent);
+    color: #fff;
+    border: none;
+    padding: 12px 18px;
+    border-radius: 50px;
+    font-size: 1em;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    transition: 0.3s;
+    z-index: 999;
+}
+
+body.dark .toggle-dark {
+    background: var(--accent-dark);
+}
+
+.back-link {
+    text-align: center;
+    margin-top: 25px;
+    font-size: 1.1em;
+}
+
+.back-link a {
+    color: var(--accent);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+body.dark .back-link a {
+    color: var(--accent-dark);
+}
+
+@media (max-width: 600px) {
+    .container { padding: 15px; }
+    h1 { font-size: 1.7em; }
+    h2 { font-size: 1.3em; }
+    ul { padding-left: 15px; }
     .toggle-dark {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background: var(--accent);
-        color: #fff;
-        border: none;
-        padding: 12px 18px;
-        border-radius: 50px;
-        font-size: 1em;
-        cursor: pointer;
-        box-shadow: 0 0 10px rgba(0,0,0,0.2);
-        transition: 0.3s;
-        z-index: 999;
+        padding: 10px 14px;
+        font-size: 0.9em;
     }
-
-    body.dark .toggle-dark {
-        background: var(--accent-dark);
-    }
-
-    .back-link {
-        text-align: center;
-        margin-top: 25px;
-        font-size: 1.1em;
-    }
-
-    .back-link a {
-        color: var(--accent);
-        text-decoration: none;
-        font-weight: bold;
-    }
-
-    body.dark .back-link a {
-        color: var(--accent-dark);
-    }
-
-    @media (max-width: 600px) {
-        .container { padding: 15px; }
-        h1 { font-size: 1.7em; }
-        h2 { font-size: 1.3em; }
-        ul { padding-left: 15px; }
-        .toggle-dark {
-            padding: 10px 14px;
-            font-size: 0.9em;
-        }
-    }
+}
 </style>
 
 <script>
 function toggleDarkMode() {
     document.body.classList.toggle('dark');
+    localStorage.setItem(
+        'theme',
+        document.body.classList.contains('dark') ? 'dark' : 'light'
+    );
 }
-</script>
 
+window.onload = () => {
+    if (localStorage.getItem('theme') === 'dark') {
+        document.body.classList.add('dark');
+    }
+};
+</script>
 </head>
 
 <body>
 
-<button class="toggle-dark" onclick="toggleDarkMode()">🌙</button>
+<button class="toggle-dark" onclick="toggleDarkMode()" aria-label="Toggle dark mode">🌙</button>
 
 <div class="container">
 
@@ -130,19 +139,67 @@ function toggleDarkMode() {
     <h2>Bluey's Avatar Commissions</h2>
 
     <p style="text-align:center; margin-bottom:20px;">
-        These Terms of Service apply to all commission work.  
-        By commissioning me, you agree to the following:
+        These Terms of Service apply to all commissions.  
+        By commissioning me, you confirm that you have read and agree to the following:
     </p>
 
     <ul>
-        <li><strong>No refunds</strong> once work has begun.</li>
-        <li>You must legally <strong>own the base model</strong> and any assets you provide.</li>
-        <li>I do not work on <strong>hateful, harmful, unsafe, or discriminatory content</strong>.</li>
-        <li>All commissions are strictly <strong>SFW</strong>.</li>
-        <li>My work is intended for <strong>VRChat use only</strong>.</li>
-        <li>Completion time varies depending on complexity, but I always work efficiently while keeping quality high.</li>
-        <li>Minor revisions are allowed to ensure you're happy with the final result.</li>
-        <li>Commissioning me means you accept these Terms.</li>
+        <li>
+            <strong>Payment Policy:</strong><br>
+            Due to past issues, <strong>50% of the total commission price is required upfront</strong> before work begins.
+            The remaining 50% must be paid upon completion, before final files are delivered.
+        </li>
+
+        <li>
+            <strong>Refunds:</strong><br>
+            Refunds are not guaranteed once work has begun and depend on how much progress has been made.
+        </li>
+
+        <li>
+            <strong>Asset Ownership:</strong><br>
+            You must legally own, or have permission to use, any base models or assets you provide.
+            I am not responsible for issues caused by stolen or unlicensed assets.
+        </li>
+
+        <li>
+            <strong>Content Boundaries:</strong><br>
+            I primarily work with SFW avatars.
+            Very limited suggestive elements may be accepted on a case-by-case basis.
+            <strong>No explicit, sexual, or adult content</strong> will be accepted.
+        </li>
+
+        <li>
+            <strong>Pricing Adjustments:</strong><br>
+            Requests involving limited suggestive elements may cost slightly more due to additional time and care.
+        </li>
+
+        <li>
+            <strong>Right to Refuse:</strong><br>
+            I reserve the right to decline or cancel any commission that makes me uncomfortable or violates these terms.
+        </li>
+
+        <li>
+            <strong>Usage:</strong><br>
+            My work is intended for <strong>personal VRChat use only</strong>.
+            Redistribution, resale, or claiming my work as your own is not permitted.
+        </li>
+
+        <li>
+            <strong>Revisions:</strong><br>
+            Minor revisions are allowed to ensure you are happy with the final result.
+            Large changes or redesigns may require an additional fee.
+        </li>
+
+        <li>
+            <strong>Completion Time:</strong><br>
+            Completion time varies depending on complexity and queue size.
+            I will always communicate progress and delays if needed.
+        </li>
+
+        <li>
+            <strong>Agreement:</strong><br>
+            Commissioning me means you fully agree to these Terms of Service.
+        </li>
     </ul>
 
     <div class="back-link">
@@ -153,3 +210,4 @@ function toggleDarkMode() {
 
 </body>
 </html>
+
